--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-ENVIRONMENT=development
-API_KEY=your_development_api_key
-# One of t20sense-prod, t20sense-dev, t20sense-qa
-BUCKET_NAME=t20sense-dev
+API_KEY="t20-sense-main.json"
+BUCKET_NAME="match_data"  # One of t20sense-prod, t20sense-dev, t20sense-qa
