--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 fastapi[all]
+google
+google-cloud-storage
+google-cloud-bigquery
 numpy
 pandas
 matplotlib
@@ -6,3 +9,4 @@ requests
 ipython
 google.cloud.storage
 python-dotenv
+plotly
